--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"vite": "^5.1.4"
 	},
 	"dependencies": {
-		"lefthook": "^1.6.1"
+		"lefthook": "^1.6.1",
+		"three-engine": "link:three-engine"
 	}
 }
