--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "@biomejs/biome": "^1.6.3",
     "@datastructures-js/priority-queue": "^6.3.1",
     "camelcase": "^8.0.0",
+    "camera-controls": "^2.8.3",
     "gsap": "^3.12.5",
-    "normalize-wheel-es": "^1.2.0",
     "three": "^0.162.0",
     "tweakpane": "^4.0.3"
   },
