--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,5 @@
 {
-  "[javascript]": {
-    "editor.defaultFormatter": "biomejs.biome"
-  },
-
-  "[typescript]": {
-    "editor.defaultFormatter": "biomejs.biome"
-  },
-
-  "[json]": {
+  "[javascript][typescript][json]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
 
